# report-helper

./: .gitignore  README.md  claude.json  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  monaco.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  rdl.rs  sql.rs  ssrs.rs
src/components/: ActivityBar.tsx  ErrorBoundary.tsx  MarkdownRenderer.tsx  MultiResultTable.tsx  ResultTable.tsx  StatusBar.tsx  TabBar.tsx  TitleBar.tsx
src/data/: expressions.ts  snippets.ts
src/hooks/: useConnectionDatabases.ts  useEditorResize.ts  useHotkeys.ts  useSettings.ts  useSqlRunner.ts  useTabs.ts
src/panels/: ChatPanel.tsx  ClaudeSessionsPanel.tsx  ExplorerPanel.tsx  ReportTabContent.tsx  SearchPanel.tsx  ServerPanel.tsx  SettingsPanel.tsx  SqlEditorPanel.tsx
src/panels/report/: MarkdownView.tsx  OverviewView.tsx  PreviewView.tsx  ReportTabContent.tsx  SqlFileView.tsx  SqlTesterView.tsx  TextFileView.tsx  XlsxView.tsx
src/panels/report/components/: AddItemsSection.tsx  Badge.tsx  Centered.tsx  DatasetCard.tsx  ExpressionPicker.tsx  ParameterCard.tsx  ParameterInput.tsx  SectionBlock.tsx
src/types/: index.ts
