[package]
name = "reporting-tools-tauri"
version = "0.1.0"
description = "SSRS Report Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "reporting_tools_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
quick-xml = { version = "0.37", features = ["serialize"] }
tiberius = { version = "0.12", default-features = false, features = ["tokio", "rustls", "chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tempfile = "3"
urlencoding = "2.1.3"
tauri-plugin-fs = "2.0.0-rc.0"
trash = "5.2.1"

